<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_above="@+id/footer"
        android:fillViewport="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/main_padding_layout" >

            <LinearLayout
                android:id="@+id/header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/motorcycle_96"
                    android:scaleType="center"
                    android:layout_gravity="center"
                    android:contentDescription="@string/iv_description" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/main_padding_items"
                    android:paddingBottom="@dimen/main_padding_items"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/editTextName"
                        style="@style/MainActivityViews"
                        android:inputType="textPersonName"
                        android:hint="@string/name_hint" />

                    <EditText
                        android:id="@+id/editTextLastName"
                        style="@style/MainActivityViews"
                        android:inputType="textPersonName"
                        android:hint="@string/last_name_hint" />

                    <EditText
                        android:id="@+id/editTextBirthday"
                        style="@style/MainActivityViews"
                        android:hint="@string/birthday_hint"
                        android:ems="10"
                        android:inputType="date" />

                </LinearLayout>
            </LinearLayout>

            <CheckBox
                android:id="@+id/checkBox1"
                style="@style/MainActivityViews"
                android:text="@string/check_box_1" />

            <CheckBox
                android:id="@+id/checkBox2"
                style="@style/MainActivityViews"
                android:text="@string/check_box_2" />

            <CheckBox
                android:id="@+id/checkBox3"
                style="@style/MainActivityViews"
                android:text="@string/check_box_3" />

            <CheckBox
                android:id="@+id/checkBox4"
                style="@style/MainActivityViews"
                android:text="@string/check_box_4" />

            <CheckBox
                android:id="@+id/checkBox5"
                style="@style/MainActivityViews"
                android:text="@string/check_box_5" />

            <CheckBox
                android:id="@+id/checkBox6"
                style="@style/MainActivityViews"
                android:text="@string/check_box_6" />

            <TextView
                android:id="@+id/textViewAlert"
                style="@style/MainActivityViews"
                android:visibility="gone" />
        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/main_padding_items"
        android:layout_alignParentBottom="true" >
        <Button
            style="@style/MainActivityViews"
            android:background="@drawable/btn"
            android:text="@string/btn_new_test"
            android:onClick="onClickStart" />
    </RelativeLayout>
</RelativeLayout>