<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cv"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="@dimen/margin_vertical"
    android:layout_marginBottom="@dimen/margin_vertical"
    android:layout_marginRight="@dimen/margin_horizontal"
    android:layout_marginLeft="@dimen/margin_horizontal"
    app:cardBackgroundColor="@color/cardBackgroundColor1"
    app:cardElevation="5dp"
    app:cardCornerRadius="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="12dp" >

        <TextView
            android:id="@+id/question_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/q"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_question_size" />

        <ImageView
            android:id="@+id/image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:visibility="gone" />

        <RadioGroup
            android:id="@+id/rg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" >

            <RadioButton
                android:id="@+id/answer_a_button"
                style="@style/RadioButtonStyle"
                android:text="@string/a" />

            <RadioButton
                android:id="@+id/answer_b_button"
                style="@style/RadioButtonStyle"
                android:text="@string/b" />

            <RadioButton
                android:id="@+id/answer_c_button"
                style="@style/RadioButtonStyle"
                android:text="@string/c" />

        </RadioGroup>

    </LinearLayout>

</androidx.cardview.widget.CardView>